--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,16 @@
 			<artifactId>flyway-core</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
+
+		<!--<dependency>-->
+			<!--<groupId>org.thymeleaf.extras</groupId>-->
+			<!--<artifactId>thymeleaf-extras-springsecurity5</artifactId>-->
+		<!--</dependency>-->
+
 		<!--<dependency>-->
 			<!--<groupId>org.webjars</groupId>-->
 			<!--<artifactId>bootstrap</artifactId>-->
